--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -127,20 +127,18 @@ Traditional methods of analyzing FMRI images use a linear combination of
 just a few static regressors. This works demonstrates an alternative
 approach using a physiologically inspired nonlinear model. By using a 
 particle filter to optimize the model parameters, the computation time
-is kept low without requiring a linearization of the noise in the state
+is kept reasonable without requiring a linearization of the noise in the state
 variables. The activation results show regions similar those found in 
 SPM; however, there are some notable regions not detected by 
 SPM. Though the parameters selected by the particle filter based approach
-presented here are more than sufficient to predict the BOLD response,
+are more than sufficient to predict the BOLD response,
 more model constraints are needed to uniquely identify a single set
 of parameters. This ill-posed nature explains the large discrepancies
-found in other research that attempt to characterize the model parameters.
-Despite this, the reliance on a single point estimator of parameters is
-unnecessary, given the output of the particle filter is a full posterior
-probability at the final time step. For this reason the final distribution 
-of parameters may still be medically relevant. For this same reason,
-additional model constrains may be performed in post-processing by a simple 
-application of conditional probability. Concluding, this work presents
+found in other research that attempted to characterize the model parameters.
+For this reason the final distribution of parameters is more medically relevant
+than a single estimate. Because the output of the particle filter is 
+a full posterior probability, the reliance on the mean to estimate 
+parameters is not strictly necessary. This work presents
 not just a viable alternative to the traditional method of detecting
 activation, but an extensible technique of estimating the joint BOLD
 parameter distribution.
