--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -11,7 +11,7 @@ different studies have endeavored to calculate parameters. The results
 of these studies may be found in \autoref{tab:Params}, and the methods 
 used for each may be found in \autoref{sec:Prior Works}. Unfortunately,
 \cite{Friston2000} only studied regions deemed active by the General 
-Linear Model; and most other research (including \cite{Friston2002b}) used these results as 
+Linear Model; and most other research (including \cite{Friston2001}) used these results as 
 the source for their priors. 
 The one exception is \cite{Johnston2008}, which came to a extremely different
 distributions. For a particle filter, the choice of a prior is
