--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -633,6 +633,7 @@ across eleven runs. The second purpose was of course to determine how the partic
 filter responded to different signal to noise ratios. 
 
 \section{Multi-voxel Simulation}
+\label{sec:Multi-voxel Simulation}
 To test the usefulness of the particle filter for I used a modified version of the FSL tool 
 POSSUM to generate an entire FMRI image from a parameter map. The parameter map was generated
 by taking an existing activation map and assigning discrete parameter sets to each region.
