added a signle section title and recompiled

--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -54,7 +54,7 @@ techniques.
 %%% Real time
 %%% Full Posterior
 %%% More intuitive
-\section{Particle Filter Approach}
+\section{Review of Particle Filter Approach}
 The Particle Filter algorithm was originally designed for on-line parameter 
 estimation. For this reason, there is no guarantee of optimality or even 
 convergence for finite measurements. However, for the BOLD nonlinear ODE there
@@ -164,6 +164,7 @@ solution, it is an impractical one.
 %% Better de-trending
 %% Automatic estimation of measurement error.
 %todo
+\section{Future Works}
 
 As result, it is possible to use
 the particle filter to localize areas where a known stimuli most directly drives
