--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -32,9 +32,9 @@ the uncertainty in parameters as a Gaussian is insufficient; so using a particle
 or Bayesian estimate of the posterior is not simply an enhancement, but a necessary precaution.
 
 Although point estimates of parameters are not dependable estimates of the 
-true parameters, they are by no means usefulness. Analysis of differences in parameters
+true parameters, they are by no means useless. Analysis of differences in parameters
 could be medically relevant. Additionally, a single estimate for parameters is still able
-to form a good estimate of the BOLD signal. This factor adds bridge to 
+to form a good estimate of the BOLD signal. This factor forms a bridge to 
 earlier types of activation tests, such as the statistical
 parametric mapping. As the results in \autoref{sec:RealData} show, the heatmaps, especially
 those of mutual information closely resembled the results of SPM. While the activation
@@ -57,9 +57,15 @@ techniques.
 \section{Review of Particle Filter Approach}
 The Particle Filter algorithm was originally designed for on-line parameter 
 estimation. For this reason, there is no guarantee of optimality or even 
-convergence for finite measurements. However, for the BOLD nonlinear ODE there
-can be no guarantee of an optimal solution. A guaranteed local minimum,
-which nonlinear least squares provides, however would be helpful. One difficulty
+convergence for finite measurements. However, for the BOLD nonlinear ODE 
+this is less of a concern than it might first appear to be. For this
+particular problem there can be no guarantee of a global minimum, and although
+other techniques guarantee a local minimum, the particle filter doesn't settle 
+to one of these local minima because it can settle into multiple ones. This
+difference typifies the major difference between the particle filter and 
+competing approaches. 
+
+One difficulty
 with the use of a particle filter with finite data is the calculation of a good
 weight function $P(y_k | x_k)$  that will converge at a decent rate. If the weight
 function does not sufficiently differentiate particles, the final distribution will 
@@ -86,8 +92,8 @@ well and does not require burdensome amounts of memory (approximately 11 megabyt
 For this reason this algorithm is perfect for extension to vector or video card
 based processors. 
 
-A more practical concern with the particle filter is that it is mathematically
-simple. Only a basic understanding of Bayesian statistics is needed to understand
+A more practical benefit with the particle filter is that it is mathematically
+simple. An understanding of Bayesian statistics is all that is necessary to understand
 how the particle filter works. This is in contrast to the Volterra based approach
 of \cite{Friston2000}, which is quite complex. Additionally very few assumptions
 are needed for the particle filter. It is a common problem in traditional statistics 
@@ -163,14 +169,11 @@ solution, it is an impractical one.
 %% Extensive test of quality of volterra kernel estimate from friston
 %% Better de-trending
 %% Automatic estimation of measurement error.
-%todo
+%% Using s as the input to other regions. 
+%% Extensive parameter estimation to find a correct prior
+%% Increased constraints on parameters using physiological data
+%% Incorporating Blood Flow/Volume data as separate measurement
 \section{Future Works}
-
-As result, it is possible to use
-the particle filter to localize areas where a known stimuli most directly drives
-neural activation. In the future it will be possible to use the estimated states
-($v,q,s,f$) to drive other models and learn more about how regions of the brain
-interact. 
 
 A limitation often reached in previous works was an inconsistency of
 parameter estimates, most likely because of covariance between the model parameters.
